--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         <div class="row">
                             <div class="col-lg-6">
                                 <ul>
-                                    <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span> <a href="https://webdoc.site/" target="_blank">Webdoc.site</a></span></li>
+                                    <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span> <a href="https://zeeshanwebdev.github.io/" target="_blank">Portfolio</a></span></li>
                                     <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+92-305-4015429</span></li>
                                     <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Lahore, Pakistan</span></li>
                                     <li>
