--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta content="" name="description">
     <meta content="" name="keywords">
     <meta property="og:image"
-          content="https://res.cloudinary.com/dkrwyqqlw/image/upload/v1655926614/webdoc/img/zee-bg.jpg" />
+          content="https://zeeshanwebdev.github.io/content/assets/document/Profile.jpg" />
 
     <!--<meta property="og:image"
           content="./content/assets/document/profile.jpg" />-->
