--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
                 <a href="#" class="google-plus" data-bs-toggle="tooltip" data-bs-placement="bottom" title="zeeshan.webdev786@gmail.com"><i class="bx bxl-skype"></i></a>
                 <a href="#contact" class="google-plus" data-bs-toggle="tooltip" data-bs-placement="bottom" title="zeeshan.webdev786@gmail.com"><i class="bx bxs-envelope"></i></a>
                 <a href="#" class="google-plus" data-bs-toggle="tooltip" data-bs-placement="bottom" title="+92-305-4015429"><i class="bx bxl-whatsapp"></i></a>
-
+                <a href="https://stackoverflow.com/users/20849192/zeeshanwebdev" target="_blank" class="linkedin"
+                   data-bs-toggle="tooltip" data-bs-placement="bottom" title="zeeshanwebdev"><i class="bx bxl-stack-overflow"></i></a>
             </div>
             <div class="mt-4"><a href="content/assets/document/Zeeshan Aslam.pdf" id="downloadbtn">Download Resume</a></div>
 
