--- a/index.html
+++ b/index.html
@@ -74,13 +74,21 @@
             <p>I'm <span class="typed" data-typed-items="Microsoft Certified Developer, Designer, Freelancer"></span></p>
             <div class="social-links">
                 <a href="https://www.linkedin.com/in/zeeshanwebdev786/" target="_blank" class="linkedin"
-                   data-bs-toggle="tooltip" data-bs-placement="bottom" title="zeeshanwebdev786"><i class="bx bxl-linkedin"></i></a>
-                <a href="https://github.com/zeeshanwebdev" target="_blank" class="linkedin" data-bs-toggle="tooltip" data-bs-placement="bottom" title="zeeshanwebdev"><i class="bx bxl-github"></i></a>
+                   data-bs-toggle="tooltip" data-bs-placement="bottom" title="Linkedin"><i class="bx bxl-linkedin"></i></a>
+                <a href="https://github.com/zeeshanwebdev" target="_blank" class="linkedin" data-bs-toggle="tooltip" data-bs-placement="bottom" title="GitHub"><i class="bx bxl-github"></i></a>
                 <a href="https://stackoverflow.com/users/20849192/zeeshanwebdev" target="_blank" class="linkedin"
-                   data-bs-toggle="tooltip" data-bs-placement="bottom" title="zeeshanwebdev"><i class="bx bxl-stack-overflow"></i></a>
-                <a href="#" class="google-plus" data-bs-toggle="tooltip" data-bs-placement="bottom" title="zeeshan.webdev786@gmail.com"><i class="bx bxl-skype"></i></a>
-                <a href="#contact" class="google-plus" data-bs-toggle="tooltip" data-bs-placement="bottom" title="zeeshan.webdev786@gmail.com"><i class="bx bxs-envelope"></i></a>
-                <a href="#" class="google-plus" data-bs-toggle="tooltip" data-bs-placement="bottom" title="+92-305-4015429"><i class="bx bxl-whatsapp"></i></a>
+                   data-bs-toggle="tooltip" data-bs-placement="bottom" title="Stack Overflow"><i class="bx bxl-stack-overflow"></i></a>
+                <a href="https://www.youtube.com/@zeeshanwebdev"
+   target="_blank"
+   class="youtube"
+   data-bs-toggle="tooltip"
+   data-bs-placement="bottom"
+   title="YouTube">
+    <i class="bx bxl-youtube"></i>
+</a>
+                <a href="#" class="google-plus" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Teams: zeeshan.webdev786@gmail.com"><i class="bx bxl-skype"></i></a>
+                <a href="#contact" class="google-plus" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Email: zeeshan.webdev786@gmail.com"><i class="bx bxs-envelope"></i></a>
+                <a href="#" class="google-plus" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Whatsup: +92-305-4015429"><i class="bx bxl-whatsapp"></i></a>
                 
             </div>
             <div class="mt-4"><a href="content/assets/document/Zeeshan Aslam.pdf" id="downloadbtn">Download Resume</a></div>
