--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <a href="https://github.com/zeeshanwebdev" target="_blank" class="linkedin" data-bs-toggle="tooltip" data-bs-placement="bottom" title="GitHub"><i class="bx bxl-github"></i></a>
                 <a href="https://stackoverflow.com/users/20849192/zeeshanwebdev" target="_blank" class="linkedin"
                    data-bs-toggle="tooltip" data-bs-placement="bottom" title="Stack Overflow"><i class="bx bxl-stack-overflow"></i></a>
-                <a href="https://www.youtube.com/@zeeshanwebdev"
+                <a href="https://www.youtube.com/@stepupyaar"
    target="_blank"
    class="youtube"
    data-bs-toggle="tooltip"
